--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,14 @@
+my.app.title=COMING FROM GITHUB SERVER
 
+
+#setting up instance id
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+#register with eureka
+eureka.client.register-with-eureka=true
+
+#enable other MS# to interact
+eureka.client.fetch-registry=true
+
+#setting up URL of Eureka server
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
